name:                Hs-conllu
version:             0.0.1
synopsis:            Conllu validating parser and utils.
-- description:         
homepage:            https://github.com/odanoburu/hs-conllu
license:             LGPL-3
license-file:        LICENSE
author:              bruno cuconato
maintainer:          bcclaro+hsconllu@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Conllu.Type, Conllu.Data.Tree, Conllu.Data.Token, Conllu.IO, Conllu.Parse
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <5, containers >=0.5 && <0.6, directory >=1.3 && <1.4, filepath >=1.4 && <1.5, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
