name:                hs-conllu
version:             0.0.1
synopsis:            Conllu validating parser and utils.
description:         utilities to parse, print, and analyse data in CoNLL-U format.
homepage:            https://github.com/odanoburu/hs-conllu
license:             LGPL-3
license-file:        LICENSE
author:              bruno cuconato
maintainer:          bcclaro+hsconllu@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Conllu.Type,
                       Conllu.Data.Tree,
                       Conllu.Data.Token,
                       Conllu.IO,
                       Conllu.Parse,
                       Conllu.Diff,
                       Conllu.Utils,
                       Conllu.Data.Lexicon,
                       Conllu.Print
  --other-modules: Conllu.Utils
  -- other-extensions:
  build-depends:       base >=4.9 && <5,
                       containers >0.5.8 && <0.6,
                       directory >=1.3 && <1.4,
                       filepath >=1.4 && <1.5,
                       megaparsec >=6 && <7,
                       void <1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hs-conllu
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.9 && <5,
                      containers >0.5.8 && <0.6,
                      directory >=1.3 && <1.4,
                      filepath >=1.4 && <1.5,
                      megaparsec >=6 && <7
  other-modules:      Conllu.Type,
                      Conllu.IO,
                      Conllu.Parse,
                      Conllu.Utils,
                      Conllu.Print
