name:                hs-conllu
version:             0.0.1
synopsis:            Conllu validating parser and utils.
description:         utilities to parse, print, and analyse data in CoNLL-U format.
extra-doc-files:      README.org
                    , CHANGELOG.md
                    , TODO.org
source-repository head
  type:               git
  location:           https://github.com/odanoburu/hs-conllu.git
homepage:            https://github.com/odanoburu/hs-conllu
bug-reports:         https://github.com/odanoburu/hs-conllu/issues
license:             LGPL-3
license-file:        LICENSE
author:              bruno cuconato
maintainer:          bruno cuconato <bcclaro+hsconllu@gmail.com>
category:            Language
build-type:          Simple
cabal-version:       >=1.10
tested-with:          GHC==8.0.2, GHC==8.2.2, GHC==8.4.1

library
  exposed-modules:     Conllu.Type,
                       Conllu.Data.Tree,
                       Conllu.Data.Token,
                       Conllu.IO,
                       Conllu.Parse,
                       Conllu.Diff,
                       Conllu.Utils,
                       Conllu.Data.Lexicon,
                       Conllu.Print
  --other-modules: Conllu.Utils
  -- other-extensions:
  build-depends:       base >=4.9 && <5,
                       containers >0.5.8 && <0.6,
                       directory >=1.3 && <1.4,
                       filepath >=1.4 && <1.5,
                       megaparsec >=6 && <7,
                       void <1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hs-conllu
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.9 && <5,
                      containers >0.5.8 && <0.6,
                      directory >=1.3 && <1.4,
                      filepath >=1.4 && <1.5,
                      megaparsec >=6 && <7
  other-modules:      Conllu.Type,
                      Conllu.IO,
                      Conllu.Parse,
                      Conllu.Utils,
                      Conllu.Print
